<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/seacher"
        android:layout_width="@dimen/search__btn_size"
        android:layout_height="@dimen/search__btn_size"
        android:layout_marginTop="@dimen/search__btn_magin_horizontal"
        android:layout_marginLeft="@dimen/search__btn_magin_horizontal"
        android:background="@drawable/search_bar_status"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_pager"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="600dp"></android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/navgation"
        android:layout_marginTop="@dimen/navgation_margin_top"
        android:orientation="horizontal"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/indicator_btn_sytle"
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:tag="0"
            android:text="@string/btn_user_name"/>

        <View
            android:layout_width="1dp"
            android:layout_height="35dp"
            android:layout_marginLeft="@dimen/line_margin"
            android:background="@drawable/line_background"
            />
        <Button
            style="@style/indicator_btn_sytle"
            android:id="@+id/recommend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:tag="1"
            android:text="@string/btn_recommend_name"/>
        <Button
            style="@style/indicator_btn_sytle"
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:tag="2"
            android:text="@string/btn_radio_name"/>
        <Button
            style="@style/indicator_btn_sytle"
            android:id="@+id/ranking"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:tag="3"
            android:text="@string/btn_ranking_name"/>
        <Button
            style="@style/indicator_btn_sytle"
            android:id="@+id/singer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:tag="4"
            android:text="@string/btn_singer_name"/>
        <com.dd.myqqmusicui.view.MusicButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="500dp"
            android:background="@drawable/selected_status"
            android:onClick="gotoMusic"
            ></com.dd.myqqmusicui.view.MusicButton>
    </LinearLayout>
</LinearLayout>
